Fixed z-index issue affecting delete button

--- a/lime/static/css/lime.views.css
+++ b/lime/static/css/lime.views.css
@@ -656,6 +656,7 @@
 
   .set a.delete {
     position:absolute;
+    z-index: 21;
     top:0;
     right: 0;
     display:block;
